# fastonosql

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  COPYRIGHT  CPPLINT.cfg  FASTOREDIS_CHANELOG  FASTOREDIS_CHANGELOG  README.md  changelog.txt  fastoredis_changelog.txt
src/: CMakeLists.txt  credentials_dialog.cpp  credentials_dialog.h  iverify_user.cpp  iverify_user.h  main.cpp  offline_verify_user.cpp  offline_verify_user.h  online_verify_user.cpp  online_verify_user.h  verify_user.cpp  verify_user.h
src/app/: credentials_dialog.cpp  credentials_dialog.h  iverify_user.cpp  iverify_user.h  main.cpp  offline_verify_user.cpp  offline_verify_user.h  online_verify_user.cpp  online_verify_user.h
src/core/: cdb_connection.cpp  cdb_connection.h  cdb_connection_client.cpp  cdb_connection_client.h  cluster_connection_settings.cpp  cluster_connection_settings.h  cluster_connection_settings_factory.cpp  cluster_connection_settings_factory.h  command.cpp  command.h  command_handler.cpp  command_handler.h  command_holder.cpp  command_holder.h  command_info.cpp  command_info.h  command_key.cpp  command_key.h  command_logger.cpp  command_logger.h  connection.cpp  connection.h  connection_commands_traits.cpp  connection_commands_traits.h  connection_confg.cpp  connection_confg.h  connection_settings.cpp  connection_settings.h  connection_settings_factory.cpp  connection_settings_factory.h  connection_types.cpp  connection_types.h  constant_commands_array.cpp  constant_commands_array.h  core_fwd.h  db_connection.cpp  db_connection.h  db_connection_client.cpp  db_connection_client.h  db_key.cpp  (+51 more)
src/core/cluster/: icluster.cpp  icluster.h
src/core/command/: command.cpp  command.h  command_handler.cpp  command_handler.h  command_holder.cpp  command_holder.h  command_info.cpp  command_info.h  command_logger.cpp
src/core/config/: config.cpp  config.h
src/core/connection_settings/: cluster_connection_settings.cpp  cluster_connection_settings.h  connection_settings.cpp  connection_settings.h  connection_settings_factory.cpp  connection_settings_factory.h  icluster_connection_settings.cpp  icluster_connection_settings.h  iconnection_settings.cpp  iconnection_settings.h  iconnection_settings_local.cpp  iconnection_settings_local.h  iconnection_settings_remote.cpp  iconnection_settings_remote.h  iconnection_settings_ssh.cpp  iconnection_settings_ssh.h  isentinel_connection_settings.cpp  isentinel_connection_settings.h  sentinel_connection_settings.cpp  sentinel_connection_settings.h
src/core/database/: idatabase.cpp  idatabase.h  idatabase_info.cpp  idatabase_info.h
src/core/db_connection/: cdb_connection.cpp  cdb_connection.h  cdb_connection_client.cpp  cdb_connection_client.h  db_connection.cpp  db_connection.h
src/core/driver/: first_child_update_root_locker.cpp  first_child_update_root_locker.h  idriver.cpp  idriver.h  idriver_local.cpp  idriver_local.h  idriver_remote.cpp  idriver_remote.h  root_locker.cpp  root_locker.h
src/core/events/: events.h  events_info.cpp  events_info.h
src/core/internal/: cdb_connection.cpp  cdb_connection.h  cdb_connection_client.cpp  cdb_connection_client.h  command_handler.cpp  command_handler.h  commands_api.cpp  commands_api.h  connection.cpp  connection.h  db_connection.cpp  db_connection.h  imodule_connection_client.cpp  imodule_connection_client.h
src/core/leveldb/: command.cpp  command.h  command_translator.cpp  command_translator.h  commands_api.cpp  commands_api.h  config.cpp  config.h  connection_settings.cpp  connection_settings.h  database.cpp  database.h  db_connection.cpp  db_connection.h  driver.cpp  driver.h  leveldb_command.cpp  leveldb_command.h  leveldb_config.cpp  leveldb_config.h  leveldb_database.cpp  server.h  (+14 more)
src/global/: global.cpp  global.h  types.cpp  types.h
src/gui/: action_cell_delegate.cpp  action_cell_delegate.h  action_table_item.cpp  base_lexer.cpp  base_lexer.h  base_shell.cpp  base_shell.h  base_shell_widget.cpp  base_shell_widget.h  channel_table_item.cpp  channel_table_item.h  channels_table_model.cpp  channels_table_model.h  connection_listwidget_items.cpp  connection_listwidget_items.h  connection_widgets_factory.cpp  connection_widgets_factory.h  fasto_common_item.cpp  fasto_common_item.h  fasto_common_model.cpp  fasto_common_model.h  fasto_editor.cpp  fasto_editor.h  fasto_editor_output.cpp  fasto_editor_output.h  fasto_editor_shell.cpp  fasto_hex_edit.cpp  fasto_hex_edit.h  fasto_scintilla.cpp  fasto_scintilla.h  fasto_table_view.cpp  fasto_table_view.h  fasto_text_view.cpp  fasto_text_view.h  fasto_tree_view.cpp  fasto_tree_view.h  gui_factory.cpp  gui_factory.h  hash_table_model.cpp  hash_table_model.h  (+41 more)
src/proxy/: cluster_connection_settings_factory.cpp  cluster_connection_settings_factory.h  connection_settings_factory.cpp  connection_settings_factory.h  db_client.cpp  db_client.h  db_ps_channel.cpp  db_ps_channel.h  proxy_fwd.h  sentinel_connection_settings_factory.cpp  sentinel_connection_settings_factory.h  server_config.cpp  server_config.h  servers_manager.cpp  servers_manager.h  settings_manager.cpp  settings_manager.h  types.cpp  types.h  user_info.cpp  user_info.h
src/resources/: .gitignore  fastonosql.qrc.in  fastoredis.qrc.in  gui.qrc.in
src/server/: json_rpc_error.cpp  json_rpc_error.h  server_config.cpp  server_config.h
src/server_config_daemon/: CMakeLists.txt  main.c  main.cpp  server_config.h
src/shell/: base_lexer.cpp  base_lexer.h  base_shell.cpp  base_shell.h  leveldb_lexer.cpp  leveldb_lexer.h  leveldb_shell.cpp  leveldb_shell.h  lmdb_lexer.cpp  lmdb_lexer.h  lmdb_shell.cpp  lmdb_shell.h  memcached_lexer.cpp  memcached_lexer.h  memcached_shell.cpp  memcached_shell.h  redis_lexer.cpp  redis_lexer.h  redis_shell.cpp  redis_shell.h  rocksdb_lexer.cpp  rocksdb_lexer.h  rocksdb_shell.cpp  rocksdb_shell.h  shell_widget.cpp  shell_widget.h  ssdb_lexer.cpp  ssdb_lexer.h  ssdb_shell.cpp  ssdb_shell.h  unqlite_lexer.cpp  unqlite_lexer.h  unqlite_shell.cpp  unqlite_shell.h  upscaledb_lexer.cpp  upscaledb_lexer.h
src/translations/: global.cpp  global.h
(+1084 files in other folders)
